--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "babylonframework",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  },
-  "dependencies": {
-    "@babylonjs/core": "^6.26.0",
-    "@babylonjs/loaders": "^6.26.0",
-    "@babylonjs/materials": "^6.26.0"
-  }
+	"name": "babylonframework",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite --host",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"typescript": "^5.0.2",
+		"vite": "^4.4.5"
+	},
+	"dependencies": {
+		"@babylonjs/core": "^6.26.0",
+		"@babylonjs/loaders": "^6.26.0",
+		"@babylonjs/materials": "^6.26.0"
+	}
 }
